--- a/dashboard.html
+++ b/dashboard.html
@@ -6,11 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Weather Dashboard</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="charts.css">
+  <link rel="stylesheet" href="weatherdetails.css">
+  <link rel="stylesheet" href="headings.css">
+  <link rel="stylesheet" href="sidemenu.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
 <body>
+  <!-- <button class="menu-toggle">&#9776;</button> -->
   <div class="container">
     <!-- Side Menu -->
     <nav class="side-menu">
@@ -94,6 +99,15 @@
 </div>
 </div>
   <script src="app1.js"></script>
+  <script>
+    const toggleButton = document.querySelector('.menu-toggle');
+    const sideMenu = document.querySelector('.side-menu');
+  
+    toggleButton.addEventListener('click', () => {
+      sideMenu.classList.toggle('open');
+    });
+  </script>
+  
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       const profilePic = document.getElementById('profile-pic');
