--- a/tables.html
+++ b/tables.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="chatbot.css">
   <link rel="stylesheet" href="headings.css">
   <link rel="stylesheet" href="sidemenu.css">
+  <link rel="stylesheet" href="forecast.css">
+  <link rel="stylesheet" href="profile.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/@google/generative-ai"></script>
 </head>
