--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="weatherdetails.css">
   <link rel="stylesheet" href="headings.css">
   <link rel="stylesheet" href="sidemenu.css">
+  <link rel="stylesheet" href="profile.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
